--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   flutter_launcher_icons: ^0.12.0
   flutter_search_bar: ^2.1.0
   sliding_clipped_nav_bar: ^3.1.0+4
+  firebase_auth: ^4.4.0
+  firebase_core: ^2.2.0
+  email_validator: ^2.1.17
+  cloud_firestore: ^4.1.0
 
 dev_dependencies:
   flutter_test:
